--- a/masterproef.tex
+++ b/masterproef.tex
@@ -1,4 +1,4 @@
-\documentclass[master=cws, oneside]{kulemt} \setup{title={Programmeren en
+\documentclass[master=cws, twoside]{kulemt} \setup{title={Programmeren en
   Bewijzen met Dependently Typed Talen}, author={Toon Nolten}, promotor={Dr.\
   Dominique Devriese \and Prof.\,dr.\,ir.\ Frank Piessens},
   assessor={Prof.\,dr.\ Marc Denecker \and Dr.\ Thomas Heyman},
@@ -12,7 +12,7 @@ assistant={Jesper Cockx}}
     model in Haskell, relying on Glasgow Haskell Compiler extensions to provide
     type system features we lack in standard Haskell. We try to illustrate how
     much, or little effort goes into static verification. And hint at reducing
-    reliance on test suites by encoding simple properties in your types.}}
+    reliance on test suites by encoding simple properties in our types.}}
 
 % TODO: toggle voor gedrukte versie?
 \usepackage[pdfusetitle,colorlinks,linkcolor=black,citecolor=black,urlcolor=black,plainpages=false]{hyperref}
@@ -53,15 +53,15 @@ assistant={Jesper Cockx}}
   interessantste probleem zat was de omzetting van een programma zoals wij het
   zouden schrijven naar zo een stroom van bits. Stilaan heb ik dan geleerd wat
   een compiler is en dat bracht eigenlijk alleen meer problemen met zich mee:
-  "Hoe kan de C compiler in C geschreven zijn?" Dit maar om aan te geven dat ik
-  het een fascinerend onderwerp vind. De interesse in dependent types is
+  ``Hoe kan de C compiler in C geschreven zijn?'' Dit maar om aan te geven dat
+  ik het een fascinerend onderwerp vind. De interesse in dependent types is
   eigenlijk eerder toevallig gekomen. Ik had de beschrijving van het onderwerp
   al eens gelezen en daarbij moest ik meteen denken aan hoe het typesysteem van
   Java mij al had tegengewerkt in vorige opdrachten. Maar ik dacht tegelijk ook
   aan Haskell wat een veel aangenamer typesysteem heeft. En die dissonantie is
   eigenlijk de reden dat ik voor dit onderwerp gekozen heb. Waarom is het ene
   typesysteem eerder aangenaam om mee te werken en het andere niet? En
-  belangrijker nog: "Hoe ver kan een typesysteem gaan?"
+  belangrijker nog: ``Hoe ver kan een typesysteem gaan?''
 
   Ik wil ook nog een aantal mensen bedanken. In de eerste plaats mijn
   begeleider Jesper en mijn promotor Dominique, zij hebben mij tegelijk op het
