--- a/referenties.bib
+++ b/referenties.bib
@@ -143,7 +143,7 @@
 }
 
 @book{C,
-  author        = "Brian Kernighan \and Dennis Ritchie",
+  author        = "Brian Kernighan and Dennis Ritchie",
   title         = "{The C Programming Language}",
   edition       = "Second"
   publisher     = "Prentice Hall",
@@ -184,13 +184,13 @@
 }
 
 @article{TPoP,
-  author = "Nicolas Oury \and Wouter Swierstra",
+  author = "Nicolas Oury and Wouter Swierstra",
   title = "{The Power of Pi}",
   year = "2008",
 }
 
 @book{sml,
-  author        = "Robin Milner \and Mads Tofte \and Robert Harper \and David
+  author        = "Robin Milner and Mads Tofte and Robert Harper and David
     MacQueen",
   title         = "{The Definition of Standard ML (Revised)}",
   publisher     = "MIT Press",
@@ -236,7 +236,7 @@
 }
 
 @article{hasochism,
-  author = "Sam Lindley \and Conor McBride",
+  author = "Sam Lindley and Conor McBride",
   title = "{Hasochism: The Pleasure and Pain of Dependently Typed haskell
     Programming}",
   year = "2008",
