--- a/besluit.tex
+++ b/besluit.tex
@@ -16,7 +16,7 @@ Wat we ook gezien hebben is dat, ook al zijn talen met dependent types nog niet
 klaar voor algemeen gebruik, de ideeën die we erin opdoen gedeeltelijk
 toepasbaar zijn in een taal zoals Haskell. Leren programmeren met dependent
 types is dus geen tijdverspilling. Het heeft een dieper inzicht in het gebruik
-van typisch in andere talen tot gevolg. En de technieken kunnen af en toe ook
+van types in andere talen tot gevolg. En de technieken kunnen af en toe ook
 overgezet worden naar die talen. 
 
 De gevalstudies hebben laten zien dat bepaalde concepten helemaal niet moeilijk
@@ -27,7 +27,7 @@ programmeren, ook al wordt het steeds lastiger hoe dichter we bij dependent
 types proberen komen. Hoewel ontwikkelingen zoals het singleton package voor
 verbetering kunnen zorgen. Wat misschien nog de belangrijkste conclusie uit de
 gevalstudies is, is dat als we een kleine toegeving doen op de precisie van de
-types, we af en toe een grote vermindering van inspanning kunnen krijgen. En
+types, we af en toe een grote vermindering van inspanning kunnen krijgen. En,
 zolang de meeste eigenschappen nog in het typesysteem uitgedrukt zijn, kunnen
 we die uit ons hoofd zetten en nadenken over belangrijkere problemen.
 
